--- a/index.css
+++ b/index.css
@@ -17,3 +17,36 @@ body {
 .cards {
     margin-top: 80px;
 }
+
+.card {
+    width: 350px;
+    display: flex;
+    background: white;
+    padding: 10px  20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.card__heading p {
+    margin-right: 20px;
+    font-size: 80px;
+    position: sticky;
+    top: 10px;
+}
+
+.card__content p {
+    font-size: 17px;
+    word-break: break-all;
+    margin: 20px 0;
+}
+
+.footer {
+    width: 100%;
+    height: 500px;
+
+    background: #394867;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
