--- a/index.css
+++ b/index.css
@@ -13,3 +13,21 @@ body {
     align-items: center;
     flex-direction: column;
 }
+
+.cards {
+    margin-top: 8px;
+}
+
+.card {
+    width: 350px;
+    display: flex;
+    background: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.card__heading p {
+    margin-right: 20px;
+    font-size: 80px;
+}
