--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ body {
 
 .card {
     width: 350px;
+    
     display: flex;
     background: white;
     padding: 10px 20px;
@@ -30,4 +31,21 @@ body {
 .card__heading p {
     margin-right: 20px;
     font-size: 80px;
+}
+
+.card__content p {
+    font-size: 17px;
+    word-break: break-all;
+    margin: 20px 0;
+}
+
+.footer {
+    width: 100%;
+    height: 500px;
+
+    background: #394867;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
