--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arimo:wght@600&family=Merriweather:wght@300&family=Noto+Sans:wght@300&family=Open+Sans&family=Roboto+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arimo:wght@600&family=Merriweather:wght@300&family=Noto+Sans:wght@300&family=Open+Sans&family=Roboto:ital,wght@1,300&display=swap');
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Merriweather', serif;
 }
 
 body {
@@ -12,42 +13,4 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-}
-
-.cards {
-    margin-top: 80px;
-}
-
-.card {
-    width: 350px;
-    
-    display: flex;
-    background: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-}
-
-.card__heading p {
-    margin-right: 20px;
-    font-size: 80px;
-    position:  sticky;
-    top: 10px;
-}
-
-.card__content p {
-    font-size: 17px;
-    word-break: break-all;
-    margin: 20px 0;
-}
-
-.footer {
-    width: 100%;
-    height: 500px;
-
-    background: #394867;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
